# exs

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  build.bat  check.bat  package-lock.json  package.json  run.bat  svelte.config.js  vite.config.ts
.claude/: CLAUDE.md
docs/: ACTION_ISLAND.md  EXECUTION_PLAN.md  exsul_tech_doc.html
scripts/: build-release.bat  dev.bat  run.bat
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_core_schema.sql  002_projection_triggers.sql  003_ai_metadata.sql  004_search_fts.sql  1001_legacy_core_bridge.sql
src-tauri/src/: lib.rs  main.rs  preflight.rs
src-tauri/src/ai/: claude.rs  gemini.rs  localization.rs  mock.rs  mod.rs  openai.rs  prompts.rs  provider.rs  router.rs  secrets.rs  types.rs  vision.rs
src-tauri/src/commands/: ai.rs  analytics.rs  audit.rs  backup.rs  categories.rs  context_files.rs  inventory.rs  mod.rs  search.rs  system.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs  seed.rs
src-tauri/src/events/: store.rs  types.rs
src-tauri/src/files/: backup.rs  local_context.rs  mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/sync/: hlc.rs  mod.rs
src/lib/: schemas.ts  types.ts
src/lib/actions/: index.ts  mouse-shake.ts  registry.svelte.ts  types.ts
src/lib/components/: AnalyticsScene.svelte  ContextInput.svelte  ProductCard.svelte  ResultScene.svelte  SalesHeatmap.svelte  VoidBackground.svelte  WindowChrome.svelte
src/lib/components/actions/: ActionIsland.svelte  index.ts
src/lib/i18n/: index.ts  ka.ts
src/lib/scene/: scene.svelte.ts
src/lib/tauri/: assets.ts  commands.ts
src/routes/: +layout.ts  +page.svelte
