[package]
name = "exsul"
version = "0.1.0"
description = "Exsul — AI business assistant core (local-first inventory, search & AI gateway)"
authors = ["Exsul Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "exsul_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
# SQLite via rusqlite. `bundled` pins a known-good SQLite (FTS5 enabled);
# `backup` powers the online backup used by the backup module.
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
base64 = "0.22"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
once_cell = "1"
# Outbound AI provider calls. rustls-tls avoids the OpenSSL build dependency
# on Windows; `json` enables typed (de)serialization of provider payloads.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
# OS-native secure storage for provider API keys (никогда не в коде/конфиге).
# Windows → Credential Manager, macOS → Keychain, Linux → Secret Service.
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
